# SourceNet

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml
configs/data/: real_socal.yaml  synthetic.yaml
configs/model/: ablation_deepsets.yaml  ablation_no_scalar.yaml  sourcenet.yaml
configs/training/: finetune.yaml  pretrain.yaml
scripts/: inference.py  train.py  verify_dataset.py  verify_model.py
src/sourcenet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sourcenet/data/: __init__.py  dataset.py
src/sourcenet/ext/: __init__.py  interface.py  mtdcmp.f
src/sourcenet/models/: components.py  network.py
src/sourcenet/utils/: metrics.py  physics.py  visualization.py
tests/: test_dataset.py  test_model.py  test_paramsize.py  test_physics.py
